[update] example 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: awesome_flutter_widgets
-description: Flutter 재사용가능한 위젯모음
+description: Awesome Flutter Widgets
 homepage: https://github.com/GiYeongUM
 repository: https://github.com/GiYeongUM/awesome_flutter_widgets
 
@@ -16,7 +16,7 @@ repository: https://github.com/GiYeongUM/awesome_flutter_widgets
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.1+1
+version: 0.0.2+2
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
