--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ repository: https://github.com/GiYeongUM/awesome_flutter_widgets
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.2+2
+version: 0.0.2+3
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
@@ -55,7 +55,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+plugin:
+  platforms:
+    android:
+      package: kr.gyu.awesome_flutter_widget
+      pluginClass: AwesomeFlutterWidget
+    ios:
+      pluginClass: AwesomeFlutterWidget
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
