--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: awesome_flutter_widgets
 description: Awesome flutter widget is a customized package with easy-to-use, animated widgets from Flutter.
 homepage: https://github.com/GiYeongUM
 repository: https://github.com/GiYeongUM/awesome_flutter_widgets
-version: 0.1.0
+version: 0.2.0
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  icon_animated: ^0.1.0+1
 
 dev_dependencies:
   flutter_test:
